--- a/main.html
+++ b/main.html
@@ -11,7 +11,18 @@
   <body>
     <h2>Infinite Scroll</h2>
     <main>
-      <ol id="infi-list"></ol>
+      <ol id="infi-list">
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+		  <li>Item 1</li>
+	  </ol>
     </main>
     <script src="./script.js"></script>
   </body>
